# School_API

./: .env.example  AUTH_DOCUMENTATION.md  Cargo.toml
migrations/: 001_create_users_table.sql
src/: main.rs
src/controllers/: auth.rs  mod.rs
src/middlewares/: auth_middleware.rs
src/models/: mod.rs  user.rs
src/routes/: auth_routes.rs
src/services/: auth_services.rs  mod.rs
src/utils/: errors.rs  jwt.rs  mod.rs
